# gmail-mcp

./: README.md  pyproject.toml
gmail_mcp/: gmail_client.py  main.py
gmail_reader/: gmail_reader.py
